--- a/bapc2024/Makefile
+++ b/bapc2024/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS := -std=gnu++17 -O3 -Ofast -march=native -pipe -flto -funroll-loops -DN
 LDFLAGS := -flto -Wl,--as-needed
 
 # Only keep source files that actually exist
-SRCS := $(wildcard A.cpp B.cpp C.cpp D.cpp E.cpp F.cpp G.cpp H.cpp I.cpp J.cpp K.cpp L.cpp)
+SRCS := $(wildcard A.cpp B.cpp C.cpp D.cpp E.cpp F.cpp G.cpp H.cpp I.cpp J.cpp K.cpp L.cpp K-real.cpp)
 EXES := $(SRCS:.cpp=)
 
 .PHONY: all clean
